cmake_minimum_required(VERSION 3.2)
project(opencv_practice)
set(CMAKE_CXX_STANDARD 11)
link_directories(/usr/local/Cellar/opencv/4.6.0_1/lib)
include_directories(/usr/local/Cellar/opencv/4.6.0_1/include/opencv4)

add_subdirectory(01.montage)
add_subdirectory(02.montage_picture_make)
add_subdirectory(03.montage_picture_grabout)
add_subdirectory(04.opencv_funcs)
add_subdirectory(05.opencv_mat)
add_subdirectory(06.smoothing)