cmake_minimum_required(VERSION 3.2)
project(montage)
set(CMAKE_CXX_STANDARD 11)
link_directories(/usr/local/Cellar/opencv/4.6.0_1/lib)
include_directories(/usr/local/Cellar/opencv/4.6.0_1/include/opencv4)
add_executable(montage montage.cpp)
target_link_libraries(montage opencv_core opencv_imgproc opencv_imgcodecs opencv_highgui)