cmake_minimum_required(VERSION 3.2)
project(montage_picture_make VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 11)
link_directories(/usr/local/Cellar/opencv/4.6.0_1/lib)
include_directories(/usr/local/Cellar/opencv/4.6.0_1/include/opencv4)
add_executable(montage_picture_make main.cpp)
target_link_libraries(montage_picture_make opencv_core opencv_imgproc opencv_imgcodecs opencv_highgui)