cmake_minimum_required(VERSION 3.2)
project(smoothing VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 11)
link_directories(/usr/local/Cellar/opencv/4.6.0_1/lib)
include_directories(/usr/local/Cellar/opencv/4.6.0_1/include/opencv4)
add_executable(smoothing main.cpp)
target_link_libraries(smoothing opencv_core opencv_imgproc opencv_imgcodecs opencv_highgui opencv_photo)